few regex note, new dependency and exercises

--- a/regex.ipynb
+++ b/regex.ipynb
@@ -21,15 +21,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Match everything nongreedy: Use ?"
+    "## Match everything nongreedy: Use ?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "x2= x[3:] + ' 0: '\n",
@@ -40,7 +44,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## findall: return a list of tuples, each tuple shows \n",
     "\n",
@@ -51,7 +57,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -75,10 +83,69 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "Another example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello', 'hello', 'hello', 'hello', 'hello', 'hello']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_text = '''\n",
+    "hello hello1 hello2\n",
+    "hello3 hello4 hello55\n",
+    "'''\n",
+    "re.compile('hello').findall(temp_text) # use ? in (.+?) to match nongreedy: shortest match first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello1', 'hello2', 'hello3', 'hello4', 'hello55']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.compile('hello\\d+').findall(temp_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## search and group\n",
-    "- group(): find ONLY the first match that satisfy the whole regex (ignore grouping). \n",
+    "- group(): find ONLY the first match that satisfies the whole regex (ignore grouping). \n",
     "- group(1): find the first group match in first parentheses (from the first match above)\n",
     "- group(2): find the match of 2nd group (if any) in second parentheses"
    ]
@@ -86,7 +153,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -107,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -173,6 +244,13 @@
    ],
    "source": [
     "temp_reg.search('abc1233xyz').group()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note that .* is greedy matching: will match as much text as possible (as above to nongreedy ? from above)"
    ]
   },
   {
