--- a/s3/everything.ipynb
+++ b/s3/everything.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,13 @@
     "        ###         1. Shift\n",
     "        ###         2. Left Arc\n",
     "        ###         3. Right Arc\n",
-    "\n",
+    "        if transition == 'S':\n",
+    "            self.stack.append(self.buffer.pop(0))\n",
+    "            return\n",
+    "        \n",
+    "        pop_pos = -2 if transition == 'LA' else -1\n",
+    "        temp = self.stack.pop(pop_pos)\n",
+    "        self.dependencies.append((self.stack[-1],temp))\n",
     "\n",
     "        ### END YOUR CODE\n",
     "\n",
@@ -88,7 +94,7 @@
     "\n",
     "        @param transitions (list of str): The list of transitions in the order they should be applied\n",
     "\n",
-    "        @return dsependencies (list of string tuples): The list of dependencies produced when\n",
+    "        @return dependencies (list of string tuples): The list of dependencies produced when\n",
     "                                                        parsing the sentence. Represented as a list of\n",
     "                                                        tuples where each tuple is of the form (head, dependent).\n",
     "        \"\"\"\n",
@@ -99,19 +105,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def minibatch_parse(sentences, model, batch_size):\n",
@@ -147,10 +149,19 @@
     "    ###             contains references to the same objects. Thus, you should NOT use the `del` operator\n",
     "    ###             to remove objects from the `unfinished_parses` list. This will free the underlying memory that\n",
     "    ###             is being accessed by `partial_parses` and may cause your code to crash.\n",
+    "    partial_parses = [PartialParse(s) for s in sentences]\n",
+    "    unfinished_parses = partial_parses[:]\n",
+    "    while len(unfinished_parses):\n",
+    "        b_parses = unfinished_parses[:batch_size]\n",
+    "        tran_list = model.predict(b_parses)\n",
+    "        for t,pp in zip(tran_list,b_parses):\n",
+    "            pp.parse_step(t)\n",
     "\n",
+    "            if len(pp.buffer) == 0 and len(pp.stack) == 1:\n",
+    "                unfinished_parses.remove(pp)       \n",
+    "    dependencies= [pp.dependencies for pp in partial_parses]\n",
     "\n",
     "    ### END YOUR CODE\n",
-    "\n",
     "    return dependencies"
    ]
   },
@@ -165,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "hidden": true
    },
@@ -285,45 +296,68 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## main"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SHIFT test passed!\n",
+      "LEFT-ARC test passed!\n",
+      "RIGHT-ARC test passed!\n",
+      "parse test passed!\n"
+     ]
+    }
+   ],
    "source": [
-    "if __name__ == '__main__':\n",
-    "    args = sys.argv\n",
-    "    if len(args) != 2:\n",
-    "        raise Exception(\"You did not provide a valid keyword. Either provide 'part_c' or 'part_d', when executing this script\")\n",
-    "    elif args[1] == \"part_c\":\n",
-    "        test_parse_step()\n",
-    "        test_parse()\n",
-    "    elif args[1] == \"part_d\":\n",
-    "        test_minibatch_parse()\n",
-    "    else:\n",
-    "        raise Exception(\"You did not provide a valid keyword. Either provide 'part_c' or 'part_d', when executing this script\")"
+    "#     elif args[1] == \"part_c\":\n",
+    "test_parse_step()\n",
+    "test_parse()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "minibatch_parse test passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#     elif args[1] == \"part_d\":\n",
+    "test_minibatch_parse()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Parser model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -342,20 +376,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 76,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ParserModel(nn.Module):\n",
@@ -398,11 +427,20 @@
     "        ###     1) Declare `self.embed_to_hidden_weight` and `self.embed_to_hidden_bias` as `nn.Parameter`.\n",
     "        ###        Initialize weight with the `nn.init.xavier_uniform_` function and bias with `nn.init.uniform_`\n",
     "        ###        with default parameters.\n",
+    "        self.embed_to_hidden_weight = nn.Parameter(torch.randn(self.embed_size * self.n_features,self.hidden_size))\n",
+    "        nn.init.xavier_uniform_(self.embed_to_hidden_weight)\n",
+    "        self.embed_to_hidden_bias = nn.Parameter(torch.randn(self.hidden_size))\n",
+    "        nn.init.uniform_(self.embed_to_hidden_bias)\n",
     "        ###     2) Construct `self.dropout` layer.\n",
+    "        self.dropout = nn.Dropout(p = self.dropout_prob)\n",
     "        ###     3) Declare `self.hidden_to_logits_weight` and `self.hidden_to_logits_bias` as `nn.Parameter`.\n",
     "        ###        Initialize weight with the `nn.init.xavier_uniform_` function and bias with `nn.init.uniform_`\n",
     "        ###        with default parameters.\n",
     "        ###\n",
+    "        self.hidden_to_logits_weight = nn.Parameter(torch.randn(self.hidden_size,self.n_classes))\n",
+    "        nn.init.xavier_uniform_(self.hidden_to_logits_weight)\n",
+    "        self.hidden_to_logits_bias = nn.Parameter(torch.randn(self.n_classes))\n",
+    "        nn.init.uniform_(self.hidden_to_logits_bias)\n",
     "        ### Note: Trainable variables are declared as `nn.Parameter` which is a commonly used API\n",
     "        ###       to include a tensor into a computational graph to support updating w.r.t its gradient.\n",
     "        ###       Here, we use Xavier Uniform Initialization for our Weight initialization.\n",
@@ -415,8 +453,6 @@
     "        ###     nn.Parameter: https://pytorch.org/docs/stable/nn.html#parameters\n",
     "        ###     Initialization: https://pytorch.org/docs/stable/nn.init.html\n",
     "        ###     Dropout: https://pytorch.org/docs/stable/nn.html#dropout-layers\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "        ### END YOUR CODE\n",
@@ -434,6 +470,8 @@
     "        ###     1) For each index `i` in `w`, select `i`th vector from self.embeddings\n",
     "        ###     2) Reshape the tensor using `view` function if necessary\n",
     "        ###\n",
+    "        temp = [torch.index_select(self.embeddings, 0, each).view(-1) for each in w]\n",
+    "        x = torch.stack(temp)\n",
     "        ### Note: All embedding vectors are stacked and stored as a matrix. The model receives\n",
     "        ###       a list of indices representing a sequence of words, then it calls this lookup\n",
     "        ###       function to map indices to sequence of embeddings.\n",
@@ -453,8 +491,7 @@
     "\n",
     "        ### END YOUR CODE\n",
     "        return x\n",
-    "\n",
-    "\n",
+    "    \n",
     "    def forward(self, w):\n",
     "        \"\"\" Run the model forward.\n",
     "\n",
@@ -479,6 +516,11 @@
     "        ###     Complete the forward computation as described in write-up. In addition, include a dropout layer\n",
     "        ###     as decleared in `__init__` after ReLU function.\n",
     "        ###\n",
+    "        x = self.embedding_lookup(w) @ self.embed_to_hidden_weight + self.embed_to_hidden_bias\n",
+    "        x = F.relu(x)\n",
+    "        x = self.dropout(x)\n",
+    "        logits = x @ self.hidden_to_logits_weight + self.hidden_to_logits_bias\n",
+    "        \n",
     "        ### Note: We do not apply the softmax to the logits here, because\n",
     "        ### the loss function (torch.nn.CrossEntropyLoss) applies it more efficiently.\n",
     "        ###\n",
@@ -494,8 +536,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## main"
@@ -503,42 +544,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
    "source": [
-    "if __name__ == \"__main__\":\n",
+    "# parser = argparse.ArgumentParser(description='Simple sanity check for parser_model.py')\n",
+    "# parser.add_argument('-e', '--embedding', action='store_true', help='sanity check for embeding_lookup function')\n",
+    "# parser.add_argument('-f', '--forward', action='store_true', help='sanity check for forward function')\n",
+    "# args = parser.parse_args()\n",
     "\n",
-    "    parser = argparse.ArgumentParser(description='Simple sanity check for parser_model.py')\n",
-    "    parser.add_argument('-e', '--embedding', action='store_true', help='sanity check for embeding_lookup function')\n",
-    "    parser.add_argument('-f', '--forward', action='store_true', help='sanity check for forward function')\n",
-    "    args = parser.parse_args()\n",
+    "embeddings = np.zeros((100, 30), dtype=np.float32)\n",
+    "model = ParserModel(embeddings)\n",
     "\n",
-    "    embeddings = np.zeros((100, 30), dtype=np.float32)\n",
-    "    model = ParserModel(embeddings)\n",
+    "def check_embedding():\n",
+    "    inds = torch.randint(0, 100, (4, 36), dtype=torch.long)\n",
+    "    selected = model.embedding_lookup(inds)\n",
+    "    assert np.all(selected.data.numpy() == 0), \"The result of embedding lookup: \" \\\n",
+    "                                  + repr(selected) + \" contains non-zero elements.\"\n",
     "\n",
-    "    def check_embedding():\n",
-    "        inds = torch.randint(0, 100, (4, 36), dtype=torch.long)\n",
-    "        selected = model.embedding_lookup(inds)\n",
-    "        assert np.all(selected.data.numpy() == 0), \"The result of embedding lookup: \" \\\n",
-    "                                      + repr(selected) + \" contains non-zero elements.\"\n",
-    "\n",
-    "    def check_forward():\n",
-    "        inputs =torch.randint(0, 100, (4, 36), dtype=torch.long)\n",
-    "        out = model(inputs)\n",
-    "        expected_out_shape = (4, 3)\n",
-    "        assert out.shape == expected_out_shape, \"The result shape of forward is: \" + repr(out.shape) + \\\n",
-    "                                                \" which doesn't match expected \" + repr(expected_out_shape)\n",
-    "\n",
-    "    if args.embedding:\n",
-    "        check_embedding()\n",
-    "        print(\"Embedding_lookup sanity check passes!\")\n",
-    "\n",
-    "    if args.forward:\n",
-    "        check_forward()\n",
-    "        print(\"Forward sanity check passes!\")"
+    "def check_forward():\n",
+    "    inputs =torch.randint(0, 100, (4, 36), dtype=torch.long)\n",
+    "    out = model(inputs)\n",
+    "    expected_out_shape = (4, 3)\n",
+    "    assert out.shape == expected_out_shape, \"The result shape of forward is: \" + repr(out.shape) + \\\n",
+    "                                            \" which doesn't match expected \" + repr(expected_out_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embedding_lookup sanity check passes!\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_embedding()\n",
+    "print(\"Embedding_lookup sanity check passes!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forward sanity check passes!\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_forward()\n",
+    "print(\"Forward sanity check passes!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# run.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look at run.py. This is simple so no need to put it here"
    ]
   }
  ],
