--- a/stanford_nameentity_dependencyparser.ipynb
+++ b/stanford_nameentity_dependencyparser.ipynb
@@ -194,42 +194,63 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/dependency_1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/dependency_2.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/dependency_3.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/dependency_4.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/dependency_5.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/dependency_6.png)"
    ]
@@ -313,11 +334,11 @@
    "metadata": {},
    "source": [
     "So we have\n",
-    "- word (d dimensional vector)\n",
-    "- POS (d dimensional vector)\n",
-    "- dependency label (d dimensional vector): this is a small set and you can extract similarities from them\n",
+    "- first word of stack (d dimensional vector)\n",
+    "- POS of the first word (d dimensional vector)\n",
+    "- dependency label of that word(d dimensional vector): this is a small set and you can extract similarities from them\n",
     "\n",
-    "Then concat them"
+    "Then concat them (we can have first word of stack, first word of buffer, ...)"
    ]
   },
   {
