new nb, minor stuff

--- a/stanford_nameentity_dependencyparser.ipynb
+++ b/stanford_nameentity_dependencyparser.ipynb
@@ -338,7 +338,9 @@
     "- POS of the first word (d dimensional vector)\n",
     "- dependency label of that word(d dimensional vector): this is a small set and you can extract similarities from them\n",
     "\n",
-    "Then concat them (we can have first word of stack, first word of buffer, ...)"
+    "Then concat them.\n",
+    "\n",
+    "This feature vector consists of a list of tokens (e.g., the last word in the stack, first word in the buffer, dependent of the second-to-last word in the stack if there is one, etc.). "
    ]
   },
   {
