--- a/stanford_w2v_formula_and_params.ipynb
+++ b/stanford_w2v_formula_and_params.ipynb
@@ -220,7 +220,7 @@
     "- a **true pair** (neighbor word and center word). We want this probability (after applying sigmoid) to be high\n",
     "- **some negative samples**: noise pairs (center word paired with random word). We want THESE probabilities to be low\n",
     "\n",
-    "Example: Started one sentence, and replaces 1 word with another (‘cats are cute’ to ‘justice are cute’). Then they made labels 1 if it was unchanged, and 0 if it was changed. Then train a binary logistic regression model and update word vector matrix so that **true pair** probability is higher than **negative samples'**"
+    "=> Train a binary logistic regression model and update word vector matrix so that **true pair** probability is higher than **negative samples'**"
    ]
   },
   {
