notes for attention

--- a/languagemodel-machinetranslation-attention.ipynb
+++ b/languagemodel-machinetranslation-attention.ipynb
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- This is test time behavior. We don't know how to train this yet\n",
+    "- **This is test time behavior**. We don't know how to train this yet\n",
     "- The final hidden state of encoder RNN (orange box) become the initial hidden state of decoder RNN\n",
     "- We fed ENGLISH WORD EMBEDDINGS to encoder RNN, and FRENCH WORD EMBEDDINGS to decoder RNN. Aka we have 2 different sets of word embeddings"
    ]
@@ -252,7 +252,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -286,6 +285,132 @@
     "- hard to control\n",
     "    - hard to put or reinforce hard-coded linguistic rule\n",
     "    - hard to put safety guidelines (safety concern: controversial translation, swear words ...)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Attention"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A problem with seq2seq model when you only use the final hidden state vector of encoder RNN to feed in decoder RNN, aka the **information bottleneck**\n",
+    "\n",
+    "![](images/translation_14.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On each step of the decoder, use **direct connection to the encoder** to **focus on particular part** of **source sentence**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/translation_15.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why 'dot product'? Since hidden state of decoder tries to predict next English word, it will contain all the information to do so, and **with a high dot product (high similarities based on cosine similarity formula)** of that hidden state to the hidden state of encoder (of some French word), **it will say: \"oh this English word I am trying to predict might be highly associated with this French word\"**\n",
+    "- note that dot product is **basic** to calculate the attention scores, which assumes 2 vectors have the same size (hidden states of encoder and decoder)\n",
+    "- there is also **multiplicative attention** way to calculate the scores\n",
+    "    - use a learnable weight matrix to learn the best way to calculate those scores\n",
+    "- also, **additive attention**, see more here: https://youtu.be/XXtpJxZBa2c?t=4517"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...continue to attention steps..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/translation_16.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/translation_17.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## math equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/translation_18.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the last step, **'proceed as in the non-attention seq2seq model'** = treat this concatenation [at;st] **as new hidden state of decoder RNN, and feed it into LSTM/GRU/vanilla RNN**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pros of using attention"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Solving the bottleneck problem**: instead of counting on only last hidden state of encoder RNN, **with attention, the decoder RNN can look at all the hidden states of encoder and make decision on which to focus on (based on attention distribution)\n",
+    "\n",
+    "- **direct connection between encoder and decoder**, similar to shortcut connection (skip connection): as hidden state of decoder will connect to multiple hs of encoders => lots of connection => gradient flowing back easier since there is no bottleneck => **reduce vanishing gradient**\n",
+    "\n",
+    "- **a sense of interpretability** by looking at the attention distribution for each word. Similar to hard alignment of SMT, but this time the neural net learns the alignment by itself. TODO: reproduce this\n",
+    "\n",
+    "![](images/translation_19.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## General definition of attention\n",
+    "\n",
+    "https://youtu.be/XXtpJxZBa2c?t=4273"
    ]
   }
  ],
